<resources>
    <string name="app_name">滑块拼图</string>
    <string name="description">Code Lyoko</string>
    <string name="pickpicture">从图库选取图片</string>
    <string name="level1">3x3</string>
    <string name="level2">4x4</string>
    <string name="level3">5x5</string>
    <string name="picktip">选择一张图片以开始游戏：</string>
    <string name="hint">帮助</string>
    <string name="restart">重新开始</string>
    <string name="backmenu">重新选图</string>
    <string name="level">选择难度</string>
    <string name="startgame">开始游戏</string>
    <string name="pause">暂停游戏</string>
    <string name="o">0</string>
    <string name="s">s</string>
    <string name="timepast">逝去时间：</string>
    <string name="record">最快记录：</string>
    <string name="winner">记录创建：</string>
    <string name="current">当前玩家：</string>
    <string name="username">用户名：</string>
    <string name="usernamehint">请输入用户名</string>
    <string name="password">密码：</string>
    <string name="passwordhint">请输入密码</string>
    <string name="rememberme">记住我</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="confirm">确认密码：</string>
    <string name="addstep">增加步数</string>
    <string name="stepleft">剩余步数：</string>
    <string name="ranklist">拼王谱</string>
    <string name="about">关于</string>
    <string name="challenge">挑战拼</string>
    <string name="confirmhint">重新输入密码</string>
    <string name="bestrecord">最佳纪录：</string>
    <string name="latest">最新记录：</string>
    <string name="coinleft">剩余金币：</string>
    <string name="timeleft">剩余时间：</string>
    <string name="addtime">增加时间</string>
    <string name="adventure">闯关拼</string>
    <string name="freedom">自由拼</string>
    <string name="descriptions">游戏说明</string>
    <string name="ok">确定</string>
    <string name="introduce">介绍</string>
    <string name="viewrank">查看排行榜</string>
    <string name="entergame">进入游戏</string>
    <string name="startfree">开拼</string>
    <string name="rank">排行榜</string>
    <string name="backmain">返回主页</string>
    <string name="pickhint">选择一张图及难度</string>
    <string name="ranking">排名</string>
    <string name="users">玩家</string>
    <string name="records">记录</string>
    <string name="difficult">挑战难度</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
