<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="60dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:paddingTop="20dip"
    android:stretchColumns="*"
    android:background="@drawable/background5"
    tools:context="xyz.mfbrain.puzzle.PreloadActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="right"
        tools:ignore="RtlHardcoded">
        <Button
            android:id="@+id/btn_reg"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            style="@style/ButtonStyle"
            android:layout_gravity="right"
            android:text="@string/login"
            tools:ignore="NestedWeights,RtlHardcoded" />
        <Button
            android:id="@+id/about"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/ButtonStyle"
            android:text="@string/about" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="6"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:gravity="center"
        android:id="@+id/titlecn"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="80dip"
        android:layout_marginRight="80dip"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            style="@style/ButtonStyle"
            android:text="@string/adventure"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/challenge"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            style="@style/ButtonStyle"
            android:text="@string/challenge" />

        <Button
            android:id="@+id/free"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            style="@style/ButtonStyle"
            android:text="@string/freedom" />

        <Button
            android:id="@+id/ranklist"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            style="@style/ButtonStyle"
            android:text="@string/ranklist" />

    </LinearLayout>



</LinearLayout>