<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="380dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:paddingTop="20dip"
    android:stretchColumns="*"
    tools:context="xyz.mfbrain.puzzle.GameLogin">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:paddingTop="10dip">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="bottom">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="8dip"
                android:text="@string/username"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/text_username"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left"
                android:hint="@string/usernamehint"
                android:paddingBottom="10dip"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="bottom">

            <TextView
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingTop="8dip"
                android:text="@string/password"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/text_password"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left"
                android:hint="@string/passwordhint"
                android:inputType="textPassword"
                android:paddingBottom="10dip"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:text="@string/rememberme"
            android:textSize="16sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/register"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="80dip"
        android:layout_marginRight="80dip"
        android:layout_weight="1"
        android:text="@string/login"
        android:textSize="18sp" />

</LinearLayout>
