<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background5"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingBottom="20dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:paddingTop="20dip"
    android:stretchColumns="*"
    tools:context="xyz.mfbrain.puzzle.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/description"
            android:minWidth="100dip"
            tools:ignore="NestedWeights" />

        <TableLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingTop="10dip"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/recorderhint"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:text="@string/winner"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/recorder"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/recordhint"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:text="@string/record"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/record"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/playerhint"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:text="@string/current"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/player"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/timehint"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="right"
                    android:text="@string/timepast"
                    android:textSize="16sp"
                    tools:ignore="RtlHardcoded" />

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="left"
                    tools:ignore="RtlHardcoded">

                    <TextView
                        android:id="@+id/tv_dispaly_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/o"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/secondhint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tv_dispaly_time"
                        android:layout_toRightOf="@id/tv_dispaly_time"
                        android:text="@string/s"
                        android:textSize="16sp" />
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="8"
        android:orientation="vertical"
        android:paddingTop="20dip">

        <TableLayout
            android:id="@+id/tablelayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/controlpanel"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pausegame"
            style="@style/ButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pause"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/hint"
            style="@style/ButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hint" />

        <Button
            android:id="@+id/restart"
            style="@style/ButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/restart" />

        <Button
            android:id="@+id/backmenu"
            style="@style/ButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/backmenu" />
    </LinearLayout>


</LinearLayout>

