<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background6"
    android:orientation="vertical"
    android:paddingBottom="20dip"
    android:paddingLeft="20dip"
    android:paddingRight="20dip"
    android:paddingTop="20dip"
    android:stretchColumns="*"
    tools:context="xyz.mfbrain.puzzle.FreeMode">


    <ImageView
        android:id="@+id/free_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:background="@mipmap/addcoin" />

    <RadioGroup
        android:id="@+id/free_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/free_image"
        android:layout_marginEnd="113dp"
        android:layout_marginRight="113dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/free_level1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level1" />

        <RadioButton
            android:id="@+id/free_level2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level2" />

        <RadioButton
            android:id="@+id/free_level3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level3" />
    </RadioGroup>

    <Button
        android:id="@+id/free_btn"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/free_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/startfree" />
</RelativeLayout>
